Minor styling changes to .timer-card class. Fixed width was messing with the page again on mobile devices.

--- a/flask_app/static/css/custom/style.css
+++ b/flask_app/static/css/custom/style.css
@@ -62,9 +62,8 @@
     color: white;
     background-color: rgb(95, 163, 205);
     border-radius: 30px;
-    padding: 20px;
+    padding: 20px 40px;
     margin-top: 20px;
-    width: 400px;
     display: flex;
     flex-direction: column;
     align-items: center;
